# Rag_Chatbot

./: .gitignore  langchain.ipynb  pyproject.toml
Documents/: Document.ipynb
chroma_db/c5314ca7-6db1-415d-b824-304f5dac29b1/: index_metadata.pickle
